--- a/application-dev.properties
+++ b/application-dev.properties
@@ -1,19 +1,18 @@
-# application-prod.properties
 spring.application.name=ebookstoreapp
-server.port=8088
+server.port=8080
 
 
 
-# MySQL Database Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/mydatabase
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.username=root
+# Disable the Whitelabel Error Page
+server.error.whitelabel.enabled=false
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.web.ErrorMvcAutoConfiguration
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
 spring.datasource.password=P@ssword
-
-
-
-# JPA Configuration
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-
+spring.jpa.properties.hibernate.format_sql=true
