--- a/application-prod.properties
+++ b/application-prod.properties
@@ -1,5 +1,5 @@
 # application-prod.properties
-spring.application.name=eBookStore-Config-Server
+# spring.application.name=eBookStore-Config-Server
 server.port=8088
 
 
